# p3Materials

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
.github/workflows/: build_project.yml  eslint_check.yml  pre_commit.yml
frontend/: eslint.config.mjs  package-lock.json  package.json  webpack.config.js
frontend/src/: App.tsx  constants.ts  index.js  store.ts  style.scss
frontend/src/components/breadcrumb/: Breadcrumb.tsx
frontend/src/components/navbar/: Navbar.tsx  style.scss
frontend/src/pages/craft/: index.ts
frontend/src/pages/floor/: index.ts
frontend/src/pages/material/: index.ts
frontend/src/pages/shadow/: ShadowPage.tsx  ShadowsList.tsx  index.ts
frontend/src/reducers/: callers.ts  craftSlice.ts  hooks.ts  materialSlice.ts  shadowSlice.ts  types.ts
p3Materials/: __init__.py  __main__.py  alembic.ini  app.py  config.py  constants.py  views.py
p3Materials/alembic/: alembic.ini  env.py
p3Materials/alembic/versions/: 2025_05_01_1730-50105075ff21_initial_revision.py  2025_05_01_2030-ba1e712e5e78_create_shadow_table.py  2025_05_01_2214-8adca1fcc905_create_material_table.py  2025_05_02_1203-01afce650416_change_floor_shadow_table.py  2025_05_02_1409-98550f5a0b31_create_craft_table.py  2025_05_02_1818-f803a45baebe_add_stats_to_shadow.py
p3Materials/api/: __init__.py  craft.py  material.py  shadow.py
p3Materials/cli/: __init__.py  main.py  p3materials.py
p3Materials/models/: __init__.py  craft.py  material.py  shadow.py
p3Materials/templates/: index.html
requirements/: base.txt  development.in  development.txt
(+26 files in other folders)
